--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.0.2",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -47,6 +48,7 @@
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "next-themes": "^0.3.0",
+    "prisma": "^5.21.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
